<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:text="@string/transportes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"/>

    <Spinner
        android:id="@+id/spinnerZonas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <RadioGroup
        android:layout_gravity="right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radioGroup">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tarNormal"
            android:id="@+id/radio1"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tarUrgente"
            android:id="@+id/radio2"/>

    </RadioGroup>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/tarjetaRegalo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tarjetaRegalo"/>

        <CheckBox
            android:id="@+id/cajaRegalo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cajaRegalo"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pesoPaquete"/>

        <EditText
            android:id="@+id/pesoPaquete"
            android:inputType="number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

    </LinearLayout>

    <Button
        android:id="@+id/buttonFin"
        android:text="@string/buttonFin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


</LinearLayout>
